feat: surface rock ore indicators